--- a/formalism.tex
+++ b/formalism.tex
@@ -31,7 +31,7 @@ Fix a set of formulae, a set of inference rule instances and a set of logical co
 
 \TODO{State that we consider derivations equal modulo associativity of vertical composition.}
 
-\begin{lemma}\label{lemma:DerivationComposition}
+\begin{lemma}\label{lemma:DerComposition}
 Given two derivations $\vlder{\Phi_1}{}{\beta}{\alpha}$ and $\vlder{\Phi_2}{}{\gamma}{\beta}$, a derivation $\vlder{\Phi_1;\Phi_2}{}{\gamma}{\alpha}$ can be constructed.
 \end{lemma}
 
@@ -52,8 +52,8 @@ We argue by structural induction on $\Phi_1$ and $\Phi_2$
 \end{enumerate}
 \end{proof}
 
-\begin{definition}\label{definition:DerivationComposition}
-Given $\Phi_1$ and $\Phi_2$ as in the premiss of Lemma~\ref{LemDerComp}, the derivation $\Phi_1;\Phi_2$ constructed in the proof of the lemma is denoted
+\begin{definition}\label{definition:DerComposition}
+Given $\Phi_1$ and $\Phi_2$ as in the premiss of Lemma~\vref{lemma:DerComposition}, the derivation $\Phi_1;\Phi_2$ constructed in the proof of the lemma is denoted
 \[
 \vlderivation
 {
@@ -68,7 +68,7 @@ Given $\Phi_1$ and $\Phi_2$ as in the premiss of Lemma~\ref{LemDerComp}, the der
 \]
 \end{definition}
 
-\begin{lemma}\label{lemma:AssociativeDerivationComposition}
+\begin{lemma}\label{lemma:DerAssociativeComposition}
 Given derivations $\vlder{\Phi_1}{}{\beta}{\alpha}$, $\vlder{\Phi_2}{}{\gamma}{\beta}$ and $\vlder{\Phi_3}{}{\delta}{\gamma}$ the derivation
 \[
 \vlderivation
@@ -93,7 +93,7 @@ is unique.
 \TODO{Double check the following definition, that it is in line with Paola and and Alessio's complexity paper.}
 
 \newcommand{\size}[1]{{\left\vert #1\right\vert}}\vlupdate\size
-\begin{definition}\label{definition:DerivationSize}
+\begin{definition}\label{definition:DerSize}
 The \emph{size} $\size\alpha$ of a formula $\alpha$, and the \emph{size} $\size\Phi$ of a derivation $\Phi$, is the number of unit and atom occurrences appearing in it.
 \end{definition}
 
