--- a/global_transformations/isolated_subflow.tex
+++ b/global_transformations/isolated_subflow.tex
@@ -47,7 +47,7 @@ Reduction\/ $\to_\fris$ is sound.
 
 %---------------------------------------
 \begin{proof}
-Let $\Phi$ be a derivation with flow $\phi'$, such that $\phi'\to_\fris\psi'$. We show that there exists a derivation $\Psi$ with flow $\psi'$ and with the same premiss and conclusion as $\Phi$. In the following, we refer to the figure in Definition~\ref{DefIsoSubRem}.
+Let $\Phi$ be a derivation with flow $\phi'$, such that $\phi'\to_\fris\psi'$. We show that there exists a derivation $\Psi$ with flow $\psi'$ and with the same premiss and conclusion as $\Phi$. In the following, we refer to the figure in Definition~\vref{definition:IsolatedSubflowRemoval}.
 
 Since $\psi$ is connected we can assume that the $\ai$-decomposed form of $\Phi$ is
 \[
