--- a/global_transformations/path_breaker.tex
+++ b/global_transformations/path_breaker.tex
@@ -125,7 +125,7 @@ Reduction $\to_\frpb$ is sound.
 \TODO{Define `evidenced'.}
 
 \begin{proof}
-Let $\Phi$ be a derivation with flow $\phi'$, such that $\phi'\to_\frpb\psi'$. We show that there exists a derivation $\Psi$ with flow $\psi'$ and with the same premiss and conclusion as $\Phi$. In the following, we refer to the figure in Definition~\ref{DefPathBreak}.
+Let $\Phi$ be a derivation with flow $\phi'$, such that $\phi'\to_\frpb\psi'$. We show that there exists a derivation $\Psi$ with flow $\psi'$ and with the same premiss and conclusion as $\Phi$. In the following, we refer to the figure in Definition~\vref{definition:PathBreaker}.
 
 Since the evidenced interaction and cut vertices belong to the same connected component, we can assume that the $\ai$-decomposed form of $\Phi$ is
 \[
@@ -214,7 +214,7 @@ Given atomic flows $\phi$ and $\psi$, such that $\phi\to_\frpb\psi$, then
 \TODO{Redo proof.}
 
 \begin{proof}
-Refer to the atomics in Figure~\ref{FigFlowBreak}.
+Refer to the atomics in Definition~\vref{definition:PathBreaker}.
 \begin{itemize}
 	\item All the edges that might be in paths from $\epsilon$ or $\epsilon'$ are coloured in red and all the edges that might be in paths to $\iota$ or $\iota'$ are coloured in green. Since the red and the green paths do not overlap, there are no paths from $\epsilon$ to $\iota$ and no paths from $\epsilon'$ to $\iota'$; and
 	\item If there is a path from an upper edge $\epsilon''$ to a lower edge $\mu''$ in the atomic flow of $\Psi$ the path must pass through one of the three copies of either $\phi$ or $\psi$, hence there must be a path from the corresponding upper edge $\lambda''$ to the corresponding lower edge $\mu''$ in the atomic flow of $\Phi$.
