--- a/thesis.tex
+++ b/thesis.tex
@@ -6,6 +6,7 @@
 %\usepackage{makeidx}
 \usepackage{fancyhdr}
 \usepackage{amsmath,amsthm}
+\usepackage{varioref}
 \usepackage[lutzsyntax]{virginialake}\aftrianglefalse
 \usepackage[urw-garamond]{mathdesign} % Comment this to use Times fonts
   \expandafter\ifx\csname leqslant\endcsname\relax\usepackage{txfonts}\fi
