Print on A4 paper

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 % Thesis main file
 
-\documentclass[11pt]{report}
+\documentclass[a4paper,11pt]{report}
 \usepackage{baththesis}
 
 %\usepackage{makeidx}
