--- a/global_transformations/path_breaker.tex
+++ b/global_transformations/path_breaker.tex
@@ -5,7 +5,7 @@
 \newcommand{\frpb}{{\mathsf{pb}}}
 %---------------------------------------
 \begin{definition}\label{definition:PathBreaker}
-We define the reduction $\to_\frpb$ (where $\frpb$ stands for \emph{path breaker}) as follows, for any two atomic flows $\phi$, with upper edges $\boldsymbol\epsilon$ and lower edges $\boldsymbol\iota$, and $\psi$ with upper edges $\boldsymbol{\epsilon'}$ and lower edges $\boldsymbol{\iota'}$:
+We define the reduction $\to_\frpb$ (where $\frpb$ stands for \emph{path breaker}) as follows, for any atomic flows $\phi$ and $\psi$:
 \[
 \atomicflow
 {
@@ -127,7 +127,9 @@ Reduction $\to_\frpb$ is sound.
 \begin{proof}
 Let $\Phi$ be a derivation with flow $\phi'$, such that $\phi'\to_\frpb\psi'$. We show that there exists a derivation $\Psi$ with flow $\psi'$ and with the same premiss and conclusion as $\Phi$. In the following, we refer to the figure in Definition~\vref{definition:PathBreaker}.
 
-Since the evidenced interaction and cut vertices belong to the same connected component, we can assume that the $\ai$-decomposed form of $\Phi$ is
+\TODO{Make sure it is correct to refer to this kind of $ai$-decomposed form.}
+
+Since the evidenced interaction and cut vertices belong to the same connected component, we can construct the following $\ai$-decomposed form of $\Phi$:
 \[
 \vlder{\Phi'}{}
 {
@@ -204,19 +206,18 @@ $}
 \TODO{Find a way to define `evidenced' so this makes sense...}
 
 \begin{proposition}\label{proposition:PathBreak}
-Given atomic flows $\phi$ and $\psi$, such that $\phi\to_\frpb\psi$, then
+Given atomic flows $\phi$ and $\psi$, such that $\phi\to_\frpb\psi$, then, referring to the atomic flows in Definition~\vref{definition:PathBreaker},
 \begin{itemize}
  \item there is no path from the evidenced interaction vertex to the evidenced cut vertex in $\psi$, and
- \item there is a path from the upper edge $\epsilon$ to the lower edge $\iota$ of $\psi$ if and only if there is a path from the upper edge $\epsilon$ to the lower edge $\iota$ of $\phi$.
+ \item let $\epsilon$ (resp., $\iota$) refer to a pair of corresponding upper (resp., lower) edges in $\phi$ and in $\psi$, then there is a path from $\epsilon$ to $\iota$ in $\psi$ if and only if there is a path from $\epsilon$ to $\iota$ in $\phi$.
 \end{itemize}
 \end{proposition}
 
 \TODO{Redo proof.}
 
 \begin{proof}
-Refer to the atomics in Definition~\vref{definition:PathBreaker}.
 \begin{itemize}
-	\item All the edges that might be in paths from $\epsilon$ or $\epsilon'$ are coloured in red and all the edges that might be in paths to $\iota$ or $\iota'$ are coloured in green. Since the red and the green paths do not overlap, there are no paths from $\epsilon$ to $\iota$ and no paths from $\epsilon'$ to $\iota'$; and
-	\item If there is a path from an upper edge $\epsilon''$ to a lower edge $\mu''$ in the atomic flow of $\Psi$ the path must pass through one of the three copies of either $\phi$ or $\psi$, hence there must be a path from the corresponding upper edge $\lambda''$ to the corresponding lower edge $\mu''$ in the atomic flow of $\Phi$.
+	\item In the atomic flow $\psi$, we have colored all the edges that might be in paths from the evidenced interaction vertex in red, and all the edges that might be in paths to the evidenced cut vertex in green. Since the red and the green paths never overlap, we know there is no path from the interaction to the cut vertex.
+	\item By Proposition~\vref{TODO}, we know that for every path from $\epsilon$ to $\iota$ in $\phi'$ there are three paths from $\epsilon$ to $\iota$ in $\psi'$, and if there is a path from $\epsilon$ to $\iota$ in $\psi'$, it must pass through one of the three subflows isomorphic to $\phi$ (resp., $\psi$) so there is a path from $\epsilon$ to $\iota$ in $\phi$.
 \end{itemize}
 \end{proof}
